--- a/css/main.css
+++ b/css/main.css
@@ -11,9 +11,9 @@ body {
 }
 html,body {font-family:"Source Sans Pro",sans-serif;text-align: center;}
 .hide-text, .logo {
-text-indent: 100%;
-white-space: nowrap;
-overflow: hidden;
+    text-indent: -9000em;
+    white-space: nowrap;
+    overflow: hidden;
 }
 img {max-width:100%;}
 h1, h3, .navbar-inverse .navbar-nav .logo a {font-family:"Open Sans",sans-serif;font-weight:600;}
